<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_toolbar_height"
        android:layout_marginLeft="@dimen/main_fragment_layout_left_right_margin"
        android:layout_marginRight="@dimen/main_fragment_layout_left_right_margin"
        android:background="@drawable/toolbar"
        android:minWidth="@dimen/main_fragment_long_btn_width"
        android:orientation="horizontal">


        <ato.spordiklubi.lastemvpublic.app.view.TypefaceTextView
            style="@style/FontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:minHeight="@dimen/custom_toolbar_height"
            android:minWidth="@dimen/main_fragment_long_btn_width"
            android:text="@string/toolbar_register_fragment"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_common_1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_fragment_layout_left_right_margin"
                android:layout_marginRight="@dimen/main_fragment_layout_left_right_margin"
                android:orientation="vertical">

                <ato.spordiklubi.lastemvpublic.app.view.TypefaceEditText
                    android:id="@+id/edittext_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_firstname"
                    android:minWidth="@dimen/edit_text_min_width" />

                <ato.spordiklubi.lastemvpublic.app.view.TypefaceEditText
                    android:id="@+id/edittext_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_lastname"
                    android:minWidth="@dimen/edit_text_min_width" />

                <ato.spordiklubi.lastemvpublic.app.view.TypefaceEditText
                    android:id="@+id/edittext_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_age"
                    android:minWidth="@dimen/edit_text_min_width" />

                <ato.spordiklubi.lastemvpublic.app.view.TypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/label_left_padding"
                    android:text="@string/label_gender"
                    android:textSize="@dimen/text_size_common_5" />

                <RadioGroup
                    android:id="@+id/radio_group_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/radio_male">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_female" />
                </RadioGroup>

                <ato.spordiklubi.lastemvpublic.app.view.TypefaceEditText
                    android:id="@+id/edittext_parent_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/custom_toolbar_home_button_right_margin"
                    android:hint="@string/hint_parent_phone"
                    android:minWidth="@dimen/edit_text_min_width" />

                <ato.spordiklubi.lastemvpublic.app.view.TypefaceEditText
                    android:id="@+id/edittext_parent_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_parent_email"
                    android:minWidth="@dimen/edit_text_min_width" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="match_parent">

                <ato.spordiklubi.lastemvpublic.app.view.TypefaceTextView
                    style="@style/Button.White.Bold"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btn_submit"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_submit"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="81dp"
                    android:layout_marginStart="81dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>




</LinearLayout>